--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -1,8 +1,24 @@
-<div className="w-screen h-screen flex flex-wrap">
-    <div className="w-1/4  bg-red-500">
-        <app-local-user-stream></app-local-user-stream>
+<div class="w-screen h-screen flex flex-col" >
+
+    <div><h1>TOP UI</h1></div>
+
+    <div class="flex flex-row flex-grow">
+
+        <div class="flex flex-col p-4">
+            <h1>left column</h1>
+            <h4>Stuff</h4>
+        </div>
+
+        <div class="grid grid-cols-2 flex-grow">
+            <div *ngFor="let id of remoteSocketIds" class="bg-green-500">
+                <app-user-stream [socketId]="id" [localStream]="id == 'local'"></app-user-stream>
+            </div>
+        </div>
+
+        <div class="">right ui</div>
+
     </div>
-    <div *ngFor="let id of remoteSocketIds" class="w-1/4 bg-green-500">
-        <app-remote-user-stream [socketId]="id"></app-remote-user-stream>
-    </div>
+
+    
+
 </div>
