--- a/src/app/components/users/user-stream/user-stream.component.html
+++ b/src/app/components/users/user-stream/user-stream.component.html
@@ -1,4 +1,4 @@
-<div class="relative">
+<div class="relative h-full">
     <h4 class="absolute text-white bg-black bg-opacity-50">{{ !localStream ? "Remote: " + socketId : "Local User" }}
     </h4>
 
@@ -10,6 +10,11 @@
             </ul>
         </div>
     </div>
-    <video #videoElement autoplay style="" class="w-full"></video>
-    <!-- <img class="w-20" src="https://as1.ftcdn.net/v2/jpg/01/63/11/70/1000_F_163117064_syJkTuCddASYjvl4WqyRmnuy8cDXpoQY.jpg"> -->
+
+    <div class="flex justify-center h-full">
+        <video #videoElement autoplay style="max-width: fit-content;" class="w-full "></video>
+        <!-- <img class="w-full" style="max-width: fit-content;" src="https://as1.ftcdn.net/v2/jpg/01/63/11/70/1000_F_163117064_syJkTuCddASYjvl4WqyRmnuy8cDXpoQY.jpg"> -->
+    </div>
+    
+    
 </div>
