--- a/src/app/components/users/user-stream/user-stream.component.html
+++ b/src/app/components/users/user-stream/user-stream.component.html
@@ -1,6 +1,5 @@
 <div class="relative h-full">
-    <h4 class="absolute text-white bg-black bg-opacity-50">{{ !localStream ? "Remote: " + socketId : "Local User" }}
-    </h4>
+    <h4 class="absolute text-white bg-black bg-opacity-50">{{ !localStream ? "Remote: " + player.socketId : "Local" }} - {{player.name}}</h4>
 
     <div class="absolute left-0 top-10 z-10">
         <div class="dropdown">
