--- a/src/app/components/users/user-stream/user-stream.component.html
+++ b/src/app/components/users/user-stream/user-stream.component.html
@@ -1,7 +1,7 @@
 <div class="relative h-full">
     <h4 class="absolute text-white bg-black bg-opacity-50">{{ !localStream ? "Remote: " + player.socketId : "Local" }} - {{player.name}}</h4>
 
-    <div class="absolute left-0 top-10 z-10">
+    <div class="absolute right-10 top-10 z-10">
         <div class="dropdown">
             <div tabindex="0" role="button" class="btn m-1"><ng-icon name="bootstrapGearFill"></ng-icon></div>
             <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-[1] w-52 p-2 shadow">
