--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -18,11 +18,12 @@
                 </div>
             </div>
 
-            <div class="flex flex-col p-4 bg-yellow-500">
-                <label for="my-drawer" class="btn btn-primary drawer-button">Admin</label>
-                <h1>left column</h1>
-                <h4>Stuff</h4>
-                <h4>Room: {{room.name}}</h4>
+            <div class="flex flex-col p-1 bg-yellow-500 min-w-64 max-w-64">
+                <h3>Room: {{room.name}}</h3>
+                <div class="shrink flex justify-center">
+                    <label *ngIf="localPlayer?.admin" for="my-drawer" class="btn btn-primary drawer-button w-1/2">Game</label>
+                </div>
+                
                 <app-messenger></app-messenger>
             </div>
             
@@ -34,8 +35,7 @@
     <div class="drawer-side">
         <label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
         <ul class="menu bg-base-200 text-base-content min-h-full w-80 p-4">
-            <!-- Sidebar content here -->
-            <li><a>Sidebar Item 1</a></li>
+            <li><button type="button" (click)="randomizeTurnOrder()">Randomize Turn Order</button></li>
             <li><a>Sidebar Item 2</a></li>
         </ul>
     </div>
