--- a/src/app/components/users/user-stream/user-stream.component.html
+++ b/src/app/components/users/user-stream/user-stream.component.html
@@ -1,7 +1,20 @@
 <div class="relative h-full">
-    <h4 class="absolute text-white bg-black bg-opacity-50">{{ !localStream ? "Remote: " + player.socketId : "Local" }} - {{player.name}}</h4>
+    
 
-    <div class="absolute right-10 top-10 z-10">
+    <div class="flex justify-center h-full">
+        <video #videoElement autoplay style="max-width: fit-content;" class="w-full "></video>
+        <!-- <img class="w-full" style="max-width: fit-content;" src="https://as1.ftcdn.net/v2/jpg/01/63/11/70/1000_F_163117064_syJkTuCddASYjvl4WqyRmnuy8cDXpoQY.jpg"> -->
+    </div>
+    
+    <div class="absolute top-0  text-white bg-black bg-opacity-50">
+        <h4 class="">{{ !localStream ? "Remote: " + player.socketId : "Local" }} - {{player.name}}</h4>
+
+        <app-life-total [lifeTotal]="player.lifeTotal" [modifyCallback]="modifyLifeTotal"></app-life-total>
+        
+    </div>
+
+
+    <div class="absolute right-10 top-10 ">
         <div class="dropdown">
             <div tabindex="0" role="button" class="btn m-1"><ng-icon name="bootstrapGearFill"></ng-icon></div>
             <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-[1] w-52 p-2 shadow">
@@ -9,11 +22,4 @@
             </ul>
         </div>
     </div>
-
-    <div class="flex justify-center h-full">
-        <video #videoElement autoplay style="max-width: fit-content;" class="w-full "></video>
-        <!-- <img class="w-full" style="max-width: fit-content;" src="https://as1.ftcdn.net/v2/jpg/01/63/11/70/1000_F_163117064_syJkTuCddASYjvl4WqyRmnuy8cDXpoQY.jpg"> -->
-    </div>
-    
-    
 </div>
