--- a/src/app/components/users/user-stream/user-stream.component.html
+++ b/src/app/components/users/user-stream/user-stream.component.html
@@ -1,22 +1,26 @@
 <div class="relative h-full">
-    
+
 
     <div class="flex justify-center h-full">
         <video #videoElement autoplay style="max-width: fit-content;" class="w-full "></video>
         <!-- <img class="w-full" style="max-width: fit-content;" src="https://as1.ftcdn.net/v2/jpg/01/63/11/70/1000_F_163117064_syJkTuCddASYjvl4WqyRmnuy8cDXpoQY.jpg"> -->
     </div>
-    
-    <div class="absolute top-0  text-white bg-black bg-opacity-50">
-        <h4 class="">{{ !localStream ? "Remote: " + player.socketId : "Local" }} - {{player.name}}</h4>
 
-        <app-life-total [lifeTotal]="player.lifeTotal" [modifyCallback]="modifyLifeTotal"></app-life-total>
-        
+
+    <div class="absolute top-0 w-full text-white bg-black bg-opacity-50 flex flex-row justify-center">
+        <app-life-total [lifeTotal]="player.lifeTotal" [modifyCallback]="modifyLifeTotal" [editable]="localStream"></app-life-total>
+    </div>
+
+    <div class="absolute top-0 text-white flex flex-row">
+        <h4 class="">{{ !localStream ? "Remote: " + player.socketId : "Local" }} - {{player.name}}</h4>
     </div>
 
 
-    <div class="absolute right-10 top-10 ">
+
+
+    <div class="absolute right-5 top-2 ">
         <div class="dropdown">
-            <div tabindex="0" role="button" class="btn m-1"><ng-icon name="bootstrapGearFill"></ng-icon></div>
+            <div tabindex="0" role="button" class="btn btn-xs"><ng-icon name="bootstrapGearFill"></ng-icon></div>
             <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-[1] w-52 p-2 shadow">
                 <li (click)="toggleFlip()"><a>Flip Video</a></li>
             </ul>
