--- a/src/app/components/users/user-stream/user-stream.component.html
+++ b/src/app/components/users/user-stream/user-stream.component.html
@@ -1,5 +1,6 @@
-<div class="relative h-full">
+<div class="relative h-full glow">
 
+    <!-- <div class="absolute w-full h-full glow top-0 left-0"></div> -->
 
     <div class="flex justify-center h-full">
         <video #videoElement autoplay style="max-width: fit-content;" class="w-full "></video>
@@ -26,4 +27,6 @@
             </ul>
         </div>
     </div>
+
+    
 </div>
