--- a/src/app/components/users/user-stream/user-stream.component.html
+++ b/src/app/components/users/user-stream/user-stream.component.html
@@ -1,4 +1,4 @@
-<div class="relative h-full glow">
+<div class="relative h-full glow" [ngClass]="{'glow':  player.isTakingTurn}">
 
     <!-- <div class="absolute w-full h-full glow top-0 left-0"></div> -->
 
@@ -8,25 +8,37 @@
     </div>
 
 
-    <div class="absolute top-0 w-full text-white bg-black bg-opacity-50 flex flex-row justify-center">
-        <app-life-total [lifeTotal]="player.lifeTotal" [modifyCallback]="modifyLifeTotal" [editable]="localStream"></app-life-total>
+    <div class="absolute top-1 w-full text-white  flex flex-col items-center">
+        <!-- <div>
+            <h2>{{player?.name | titlecase }}</h2>
+        </div> -->
+        <app-life-total [lifeTotal]="player.lifeTotal" [modifyCallback]="modifyLifeTotal"
+            [editable]="localStream" [playerName]="player.name"></app-life-total>
     </div>
 
-    <div class="absolute top-0 text-white flex flex-row">
-        <h4 class="">{{ !localStream ? "Remote: " + player.socketId : "Local" }} - {{player.name}}</h4>
+    <div class="absolute top-2 left-2 text-white flex flex-col ">
+        <!-- <div>
+            <h2>{{player?.name | titlecase}}</h2>
+        </div> -->
+        <div class="text-xs">
+            <!-- <p class="">{{ !localStream ? "Remote: " + player.socketId : "Local" }} - {{player.name}}</p> -->
+            <p>Turn: {{ player.currentTurnStartTime | timeAgo | async }}</p>
+            <p>Avg: {{ (player.totalTurnTime/ ( (player.totalTurns) || 1 ) ) | timeAgo | async }}</p>
+        </div>
+
     </div>
 
 
 
 
-    <div class="absolute right-5 top-2 ">
+    <div class="absolute right-2 top-2 ">
         <div class="dropdown">
             <div tabindex="0" role="button" class="btn btn-xs"><ng-icon name="bootstrapGearFill"></ng-icon></div>
-            <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-[1] w-52 p-2 shadow">
-                <li (click)="toggleFlip()"><a>Flip Video</a></li>
+            <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-[1] w-52 p-2 shadow ">
+                <li (click)="toggleFlip()" class="text-slate-800"><a>Flip Video</a></li>
             </ul>
         </div>
     </div>
 
-    
+
 </div>
