--- a/src/app/components/card-list/card-list-item/card-list-item.component.html
+++ b/src/app/components/card-list/card-list-item/card-list-item.component.html
@@ -1,3 +1,3 @@
-<div class="pt-1 pb-1">
-    <p class="text-white text-sm btn btn-sm btn-outline">{{card.name}}</p>
+<div class="pt-1 pb-1 ml-2.5 mr-2.5">
+    <p class="text-white text-sm btn btn-sm btn-outline w-full h-full">{{card.name}}</p>
 </div>
