--- a/src/app/components/card-list/card-list.component.css
+++ b/src/app/components/card-list/card-list.component.css
@@ -6,3 +6,15 @@
     height:363px;
     /* overflow-y: scroll; */
 }
+
+.cascadingCard{
+    position: absolute;
+    width:100%;
+    left:0px;
+    /* top:-250px; */
+    /* margin-top:-250px; */
+}
+
+#cardSeperator{
+    border-color: rgba(255, 255, 255, 0.383);
+}
