--- a/src/app/components/messaging/message/message.component.html
+++ b/src/app/components/messaging/message/message.component.html
@@ -5,11 +5,11 @@
                 src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
         </div>
     </div> -->
-    <div class="chat-header">
+    <div class="chat-header text-white">
         {{message.player.name}}
         <!-- <time class="text-xs opacity-50">{{message.date}}</time> -->
     </div>
-    <div class="chat-bubble">{{message.text}}</div>
+    <div class="chat-bubble text-white">{{message.text}}</div>
 </div>
 
 
