--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -40,7 +40,7 @@
 
     <div class="drawer-side">
         <label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
-        <ul class="menu bg-base-200 text-base-content min-h-full w-80 p-4">
+        <ul class="menu popupColors min-h-full w-80 p-4">
             <li><button type="button" (click)="randomizeTurnOrder()">Randomize Turn Order</button></li>
             <li><button type="button" (click)="startGame()">Start Game</button></li>
         </ul>
