--- a/src/app/components/messaging/messenger/messenger.component.html
+++ b/src/app/components/messaging/messenger/messenger.component.html
@@ -7,7 +7,7 @@
 
   <div class="form-control mt-4">
     <label class="input-group">
-      <input type="text" [(ngModel)]="newMessage" placeholder="Enter message..." class="input input-bordered w-full bg-slate-600 text-white" (keydown.enter)="sendMessage()"/>
+      <input type="text" [(ngModel)]="newMessage" placeholder="Enter message..." class="p-2 rounded w-full bg-slate-600 text-white" (keydown.enter)="sendMessage()"/>
       <!-- <button (click)="sendMessage()" class="btn btn-primary">Send</button> -->
     </label>
   </div>
