--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -8,12 +8,12 @@
             <div class="mb-4">
                 <label for="playerName" class="block text-sm font-medium text-white">Player Name:</label>
                 <input type="text" id="playerName" name="name" [(ngModel)]="player.name" required
-                    class="mt-1 p-2 w-full border rounded-md shadow-sm text-black">
+                    class="mt-1 p-2 w-full border rounded-md shadow-sm popupColors">
             </div>
             <div class="mb-6">
                 <label for="roomName" class="block text-sm font-medium text-white">Room Name:</label>
                 <input type="text" id="roomName" name="roomName" [(ngModel)]="player.roomName" required
-                    class="mt-1 p-2 w-full border rounded-md shadow-sm text-black">
+                    class="mt-1 p-2 w-full border rounded-md shadow-sm popupColors">
             </div>
             <button type="submit" id="submitButton" class="w-full btn btn-outline text-white py-2 px-4 rounded"
                 [disabled]="!playerForm.valid">Join</button>
