--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -43,6 +43,7 @@
         <ul class="menu popupColors min-h-full w-80 p-4">
             <li><button type="button" (click)="randomizeTurnOrder()">Randomize Turn Order</button></li>
             <li><button type="button" (click)="startGame()">Start Game</button></li>
+            <li><button type="button" (click)="resetGame()">Reset Game</button></li>
         </ul>
     </div>
 
